add playback functionality, add hamburger, add background

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,3 +1,4 @@
+
 .flash {
   font-size: 2.5em;
   color: red;
@@ -15,7 +16,7 @@
 .devise-title,
 .devise-links {
   text-align: center;
-  font-family: Abril Fatface;
+  font-family: 'Kreon';
 }
 
 .devise-title {
