--- a/app/assets/stylesheets/idea_modal.scss
+++ b/app/assets/stylesheets/idea_modal.scss
@@ -1,3 +1,4 @@
+
 #new-idea-form-time,
 #new-idea-form-title-label,
 #new-idea-form-title-input,
@@ -7,7 +8,7 @@
 #newIdeaTitle,
 .new-idea-form-input
 {
-  font-family: Abril Fatface;
+  font-family: 'Kreon';
 }
 
 .fa-lightbulb {
