--- a/app/assets/stylesheets/mix_form.scss
+++ b/app/assets/stylesheets/mix_form.scss
@@ -1,8 +1,9 @@
+
 .form,
 #mix-form-submit,
 #new-mix-title {
   text-align: center;
-  font-family: Abril Fatface;
+  font-family: 'Kreon';
 }
 
 .form {
