--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -9,12 +9,12 @@
 #user-show-username {
   float: left;
   margin-left: 1.5rem;
-  font-family: Abril Fatface;
+  font-family: 'Kreon';
 }
 
 .user-full-name {
   font-size: 2rem;
-  font-family: Abril Fatface;
+  font-family: 'Kreon';
   color: #ffb3ff;
 }
 
@@ -90,7 +90,7 @@
 }
 
 #tower-text {
-  font-family: Abril Fatface;
+  font-family: 'Kreon';
 }
 
 .fa-upload {
@@ -109,7 +109,7 @@
 
 #new-vibe-text {
   font-size: 2rem;
-  font-family: Abril Fatface;
+  font-family: 'Kreon';
   color: #ed1eed;
 }
 #new-vibe-text:hover {
