--- a/app/assets/stylesheets/vibe_form.scss
+++ b/app/assets/stylesheets/vibe_form.scss
@@ -1,8 +1,9 @@
+
 #vibe-form-submit,
 #new-vibe-title,
 #first-mix-title {
   text-align: center;
-  font-family: Abril Fatface;
+  font-family: 'Kreon';
 }
 
 #new-vibe-title,
