--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -8,9 +8,9 @@
 @import url('https://fonts.googleapis.com/css?family=Spicy+Rice');
 @import url('https://fonts.googleapis.com/css?family=Kreon');
 
-// body {
-//   background-color: black;
-// }
+* {
+  font-family: 'Kreon';
+}
 
 .row {
   margin-left: 0;
@@ -86,7 +86,7 @@ body {
   // aquamarine 23%,
   transparent 10%,
   transparent),
-  radial-gradient(circle, rgba(256,256,256,0.1) 70%, rgba(9,9,121,0.577468487394958) 100%);
+  radial-gradient(circle, rgba(255,255,255,0.1) 70%, rgba(255,0,255,0.577468487394958) 100%);
   background-repeat: no-repeat;
 
 }
