--- a/app/assets/stylesheets/hamburger.scss
+++ b/app/assets/stylesheets/hamburger.scss
@@ -3,10 +3,13 @@
 .fa-times {
   color: #476cff;
   margin-top: 1rem;
-  margin-right: 0.5rem;
+  &:hover {
+    color: #724cff;
+  }
 }
 
 .fa-times {
+  margin-left: 0.15rem;
   animation: TwitchRotate;
   animation-duration: 3s;
   animation-iteration-count: 1;
@@ -18,12 +21,37 @@
   animation-iteration-count: 1;
 }
 
-.hamburger-menu {
+.top-right-elements {
+  padding: 0;
+}
+
+.hamburger-container {
+  margin-right: 1rem;
+  margin-top: 0.5rem;
+  border-radius: 10px;
   text-align: center;
-  width: 18%;
+  padding: 0 0.25rem 0.5rem 0.25rem;
+  background-color: white;
+  box-shadow: 2px 4px 12px 2px rgba(0,0,0,0.2);
+}
+
+.hamburger-user-name {
+  color: #476cff;
+  margin-right: 0.5rem;
+  text-transform: uppercase;
+  &:hover {
+    color: #724cff;
+    text-decoration: none;
+  }
+}
+
+.hamburger-menu {
+  // width: 5rem;
   right: 0px;
-  position: absolute;
   z-index: 1;
+  margin-right: 1rem;
+  position: absolute;
+  text-align: center;
 }
 
 .hamburger-li a {
@@ -31,11 +59,16 @@
 }
 
 .hamburger-menu a {
+  color: #476cff;
   border-radius: 10px;
   margin-top: 0.2rem;
 	display: block;
   background-color: white;
-  box-shadow: 8px 6px 12px 6px rgba(0,0,0,0.2);
+  box-shadow: 2px 4px 12px 2px rgba(0,0,0,0.2);
+  &:hover {
+    color: #724cff;
+    text-decoration: none;
+  }
 }
 
 #first-hamburger-li {
