--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -80,6 +80,7 @@ button.btn {
         width: 200px;
         ~ button {
           &.btn-search {
+            margin-left: 0rem;
             animation: jumpTowardSearch 1.2s linear;
             background: #FF00FF;
             color: #fff;
@@ -95,6 +96,7 @@ button.btn {
     button.btn {
       transition: all .6s ease-in-out;
       &.btn-search {
+        margin-left: 2.2rem;
         background: #00FF00;
         border-radius: 50%;
         height: 26px;
@@ -103,6 +105,7 @@ button.btn {
         width: 26px;
       }
       &.btn-reset {
+        margin-left: 2.2rem;
         background: #fff;
         border: 1px solid #00FF00;
         border-radius: 50%;
