--- a/app/assets/stylesheets/wavey_player.scss
+++ b/app/assets/stylesheets/wavey_player.scss
@@ -120,9 +120,9 @@
 
 @-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff00dc, 0 0 40px #ff00dc, 0 0 50px #ff00dc, 0 0 60px #ff00dc, 0 0 70px #ff00dc;
+    text-shadow: 0 0 5px #fff, 0 0 20px #fff, 0 0 30px yellow, 0 0 40px yellow, 0 0 50px yellow, 0 0 60px yellow, 0 0 70px yellow;
   }
   to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #80ffbf, 0 0 40px #80ffbf, 0 0 50px #80ffbf, 0 0 60px #80ffbf, 0 0 70px #80ffbf, 0 0 80px #80ffbf;
+    text-shadow: 0 0 5px #fff, 0 0 30px red, 0 0 40px red, 0 0 50px red, 0 0 60px red, 0 0 70px red, 0 0 80px red;
   }
 }
