deleted swirls, changed background and uncer construction

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -86,7 +86,7 @@ body {
   // aquamarine 23%,
   transparent 10%,
   transparent),
-  radial-gradient(circle, rgba(255,255,255,0.1) 70%, rgba(255,0,255,0.577468487394958) 100%);
+  radial-gradient(circle, rgba(255,255,255,0.1) 70%, rgba(71, 108, 255, 0.5) 100%);
   background-repeat: no-repeat;
 
 }
