--- a/app/assets/stylesheets/my-player.scss
+++ b/app/assets/stylesheets/my-player.scss
@@ -12,19 +12,19 @@
 }
 
 .repeat-unclicked {
-  color: black;
+  color: white;
 }
 .repeat-clicked {
   color: #ff00dc;
-  text-shadow: 1px 1px black, -1px -1px black;
+  text-shadow: 1px 1px white, -1px -1px white;
 }
 
 .shuffle-unclicked {
-  color: black;
+  color: white;
 }
 .shuffle-clicked {
   color: #ffff00;
-  text-shadow: 1px 1px black, -1px -1px black;
+  text-shadow: 1px 1px white, -1px -1px white;
 }
 
 .switch {
