--- a/app/assets/stylesheets/wavey_player.scss
+++ b/app/assets/stylesheets/wavey_player.scss
@@ -82,7 +82,7 @@
 }
 
 .info {
-  color: black;
+  color: white;
   position: absolute;
   // bottom: 20px;
   left: 0;
@@ -94,14 +94,14 @@
 .title {
   font-size: 1.4em;
   font-weight: 400;
-  color: black;
+  color: white;
   margin-bottom: 8px;
   text-transform: uppercase;
   font-family: 'Kreon', sans-serif;
 }
 
 .artist {
-  color: black;
+  color: white;
   font-size: 1.2em;
   letter-spacing: 0.08em;
   // font-family: 'Reem Kufi', sans-serif;
