--- a/app/assets/stylesheets/wavey_player.scss
+++ b/app/assets/stylesheets/wavey_player.scss
@@ -34,7 +34,7 @@
   position: absolute;
   width: 100%;
   z-index: 2;
-  // background: linear-gradient(rgba(9, 2, 4, 0), #444);
+  background: linear-gradient(rgba(9, 2, 4, 0), #444);
 }
 
 .wave {
@@ -46,7 +46,7 @@
   top: 0;
   margin-left: -70%;
   margin-top: -130%;
-  // background: radial-gradient(#a5ffc0, #fcdbf8);
+  background: radial-gradient(#a5ffc0, #fcdbf8);
   // background-color: #a5ffc0;
 }
 
@@ -62,6 +62,7 @@
 /* when stop */
 .wave {
   border-radius: 40%;
+  left: 50%;
   animation: wave 55s infinite linear;
 }
 
@@ -88,7 +89,7 @@
   left: 0;
   right: 0;
   text-align: center;
-  // -webkit-animation: glow 10s ease-in-out infinite alternate;
+    // -webkit-animation: glow 10s ease-in-out infinite alternate;
 }
 
 .title {
@@ -114,6 +115,6 @@
 }
 
 .music-card {
+  width: 30rem;
   margin: 1rem 0 0 0.5rem;
-  width: 12rem;
 }
