eliminate margin-top from wavey-player

--- a/app/assets/stylesheets/wavey_player.scss
+++ b/app/assets/stylesheets/wavey_player.scss
@@ -45,7 +45,7 @@
   left: 0;
   top: 0;
   margin-left: -70%;
-  margin-top: -130%;
+  // margin-top: -130%;
   background: radial-gradient(#a5ffc0, #fcdbf8);
   // background-color: #a5ffc0;
 }
@@ -116,5 +116,5 @@
 
 .music-card {
   margin: 1rem 0 0 0.5rem;
-  width: 10rem;
+  width: 30rem;
 }
