--- a/app/assets/stylesheets/wavey_player.scss
+++ b/app/assets/stylesheets/wavey_player.scss
@@ -44,7 +44,7 @@
   opacity: 0.2;
   left: 0;
   top: 0;
-  margin-left: -70%;
+  // margin-left: -70%;
   // margin-top: -130%;
   background: radial-gradient(#a5ffc0, #fcdbf8);
   // background-color: #a5ffc0;
@@ -97,7 +97,6 @@
   font-weight: 400;
   color: white;
   margin-bottom: 8px;
-  text-transform: uppercase;
   font-family: 'Kreon', sans-serif;
 }
 
