--- a/app/assets/stylesheets/my-player.scss
+++ b/app/assets/stylesheets/my-player.scss
@@ -1,75 +1,129 @@
 
 .my-player {
-  // padding: 0;
-  left: 5rem;
-  margin-top: 1rem;
+  margin-top: 3rem;
+}
+
+.what-is-next {
+  margin-left: 7rem;
+}
+
+.fa-redo-alt, .fa-random {
+  transform: scale(1.25);
+  margin-top: -0.25rem;
+  margin-bottom: 1rem;
 }
 
 .playback-buttons {
   margin-top: 1rem;
 }
 
-.playback:hover {
-  transform: scale(1.3);
+.playback {
+  text-align: center;
 }
+//
+// .playback:hover {
+//   transform: scale(1.3);
+// }
 
 .repeat-unclicked {
   color: white;
+  text-shadow: 0 0 6px #ff00dc;
 }
 .repeat-clicked {
-  color: #ff00dc;
-  text-shadow: 1px 1px white, -1px -1px white;
+  text-shadow: 0 0 5px #fff, 0 0 7.5px #ff00dc, 0 0 10px #ff00dc, 0 0 15px #ff00dc;
 }
 
 .shuffle-unclicked {
   color: white;
+  text-shadow: 0 0 6px #ffff00;
 }
 .shuffle-clicked {
-  color: #ffff00;
-  text-shadow: 1px 1px white, -1px -1px white;
-}
-
-.switch {
-  margin-left: 0.5rem;
-  margin-bottom: 0;
-  filter: hue-rotate(60deg);
-}
-
-.control {
-  padding-left: 0;
-  margin-left: 1rem;
-}
-
-.volume-slider {
-  margin-top: 0.5rem;
-  padding-left: 0;
-  padding-right: 0;
-  filter: hue-rotate(-30deg);
-  &:hover {
-    transform: scale(1.1);
-  }
-}
-
-.range-slider {
-  margin: 0;
+  text-shadow: 0 0 5px #fff, 0 0 7.5px #ffff00, 0 0 10px #ffff00, 0 0 15px #ffff00;
 }
 
 .play-icon {
-  transform: scale(2);
-  &:hover {
-    transform: scale(2.3);
-  }
+  margin-top: 0.3rem;
 }
 
-#index-page-vibe-reactions {
-  margin: auto;
+.switch {
+  margin-bottom: 0.5rem;
 }
+//
+// .control {
+//   padding-left: 0;
+//   margin-left: 1rem;
+// }
 
-.reaction-num {
-  margin: 0 1rem 0 0.1rem;
-}
-
-.fire,
-.ice {
+.volume-slider {
+  margin-top: 0.5rem;
   margin-left: 2rem;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.custom-range {
+  box-shadow: 0 0 5px #fff, 0 0 2.5px #fff, 0 0 5px #fff, 0 0 10px #fff;
+}
+
+.back-icon {
+  padding: 0rem 0.55rem;
+}
+
+.play-icon {
+  transform: scale(2.5);
+  padding: 0;
+  margin-left: 1.065rem;
+}
+
+.forward-icon {
+  margin-right: 0.55rem;
+}
+
+.playback-buttons-container {
+  margin-top: 0.5rem;
+}
+
+.playback-buttons {
+  width: 6rem;
+  height: 6rem;
+  margin-top: -2rem;
+  // line-height: 160px;
+  border-radius: 80px;
+  background-image:
+    -webkit-radial-gradient(  50%   0%,  8% 50%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),
+    -webkit-radial-gradient(  50% 100%, 12% 50%, hsla(0,0%,100%,.6) 0%, hsla(0,0%,100%,0) 100%),
+    -webkit-radial-gradient(   0%  50%, 50%  7%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),
+    -webkit-radial-gradient( 100%  50%, 50%  5%, hsla(0,0%,100%,.5) 0%, hsla(0,0%,100%,0) 100%),
+
+    -webkit-repeating-radial-gradient( 50% 50%, 100% 100%, hsla(0,0%,  0%,0) 0%, hsla(0,0%,  0%,0)   3%, hsla(0,0%,  0%,.1) 3.5%),
+    -webkit-repeating-radial-gradient( 50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0)   6%, hsla(0,0%,100%,.1) 7.5%),
+    -webkit-repeating-radial-gradient( 50% 50%, 100% 100%, hsla(0,0%,100%,0) 0%, hsla(0,0%,100%,0) 1.2%, hsla(0,0%,100%,.2) 2.2%),
+
+    -webkit-radial-gradient( 50% 50%, 200% 50%, hsla(0,0%,90%,1) 5%, hsla(0,0%,85%,1) 30%, hsla(0,0%,60%,1) 100%);
+}
+
+.playback-buttons:before, .playback-buttons:after {
+  content: "";
+  // top: 0;
+  // left: 3rem;
+  position: relative;
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+
+  /* fake conical gradients */
+  background-image: -webkit-radial-gradient(  50%   0%, 10% 50%, hsla(0,0%,0%,.1) 0%, hsla(0,0%,0%,0) 100%),
+    -webkit-radial-gradient(  50% 100%, 10% 50%, hsla(0,0%,0%,.1) 0%, hsla(0,0%,0%,0) 100%),
+    -webkit-radial-gradient(   0%  50%, 50% 10%, hsla(0,0%,0%,.1) 0%, hsla(0,0%,0%,0) 100%),
+    -webkit-radial-gradient( 100%  50%, 50% 06%, hsla(0,0%,0%,.1) 0%, hsla(0,0%,0%,0) 100%);
+}
+.playback-buttons:before { transform: rotate( 65deg); }
+.playback-buttons:after { transform: rotate(-65deg); }
+
+.control {
+  margin-top: 1.75rem;
+  text-shadow: 0px 1px 1px black, 0px 0px 10px #80ffbf;
+  &:active {
+    -webkit-animation: glow 2s ease-in-out infinite alternate;
+  }
 }
