--- a/app/views/vibes/show.html.erb
+++ b/app/views/vibes/show.html.erb
@@ -1,25 +1,5 @@
-<!-- <div class="show-page">
-  <div class="vibe-show-page-div row">
-    <div class="song-info small-6 medium-6 columns">
-      <h1 class="vibe-name"><%= @vibe.name %></h1>
-      <h2>
-        <%= link_to @user.username, user_path(@user), :class => "vibe-user", :id => "show-page-vibe-name" %>
-      <h2/>
-      <p class="vibe-blurb"><%= @vibe.blurb %></p>
-      <div class="columns">
-        <div class="fire-text">
-          <i class="fas fa-fire"></i>
-          <%= @vibe.fire %>
-        </div>
-        <div class="chill-text">
-          <i class="fas fa-snowflake"></i>
-          <%= @vibe.ice %>
-        </div>
-      </div>
-    </div>
-    <%= image_tag(@vibe.art.url, class: "vibe-art small-6 medium-6 columns") %>
-  </div> -->
 
   <div id="app"></div>
-
-</div>
+  <!-- <script>
+    debugger
+  </script> -->
