--- a/app/assets/stylesheets/coverflow.scss
+++ b/app/assets/stylesheets/coverflow.scss
@@ -26,17 +26,29 @@
 }
 
 .swiper-button-next, .swiper-button-prev {
+  filter: hue-rotate(90deg);
     border-radius: 49%;
     padding: 2.5rem;
+    // box-shadow: 0 0 10px #fff;
     &:hover {
-      border: 3px  #007bff;
+      filter: hue-rotate(-90deg);
+      border: 3px #007bff;
       box-shadow: 0 0 5px #fff, 0 0 2.5px #fff, 0 0 5px #fff, 0 0 20px #fff;
     }
     &:active{
+      filter: hue-rotate(0deg);
       background-color: hotpink;
       border: 3px solid aquamarine;
       transform: scale(0.75);
     }
+}
+
+.swiper-button-prev {
+  left: 7rem;
+}
+
+.swiper-button-next {
+  left: 67rem;
 }
 
 .swiper-pagination {
