--- a/app/assets/stylesheets/ideas.scss
+++ b/app/assets/stylesheets/ideas.scss
@@ -11,6 +11,7 @@ $indigo: #476cff;
   width: 3rem;
   height: 3rem;
   float: right;
+  top: -3rem;
   filter: saturate(18) hue-rotate(-55deg);
   &:hover {
     filter: saturate(18);
@@ -21,16 +22,68 @@ $indigo: #476cff;
 }
 
 .idea-icon {
-  top: 3  rem;
-  width: 0.1rem;
-  height: 0.1rem;
+  top: 2.5rem;
+  width: 0.5rem;
+  height: 0.5rem;
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   &:hover {
+    z-index: 3;
     color: $pink;
+    transform: scale(2);
     text-shadow: 2px 2px 50px $green;
   }
   &:active {
+    z-index: 3;
+    transform: scale(0.5);
     border: none;
   }
+}
+
+
+#idea-user {
+  float: left;
+  height: 25%;
+  width: 25%;
+  border-width: 2px;
+  margin-left: 1.5rem;
+  box-shadow: 4px 2px 8px 5px rgba(0,0,0,0.2);
+}
+
+#idea-username {
+  color: $indigo;
+  font-size: 2rem;
+  text-align: center;
+  font-family: 'Monoton';
+  box-shadow: 4px 2px 8px 2px rgba(0,0,0,0.2);
+  text-shadow: 0px 3px 4px #fff, 2px 5px 32px $pink, 5px -3px 7px $indigo;
+}
+
+#idea-title,
+#idea-description {
+  text-align: center;
+}
+
+#idea-title {
+  margin-top: 2rem;
+  text-align: center;
+  color: $green;
+  font-size: 3rem;
+  text-shadow: 1px 2px 3px #fff, 3px 5px 5px $pink, 3px 5px 10px $indigo;
+}
+
+#idea-description {
+  color: $pink;
+  font-size: 2rem;
+  width: 25rem;
+  margin: 1rem 15rem 1rem 10rem;
+  text-shadow: 2px 2px 4px #fff, 1px 3px 0px $indigo, 1px 4px 2px $pink;
+}
+
+#idea-title-row {
+  display: inline;
+}
+
+#idea-lightbulb {
+  transform: scale(15);
 }
