--- a/app/assets/stylesheets/my-player.scss
+++ b/app/assets/stylesheets/my-player.scss
@@ -4,7 +4,7 @@
 }
 
 .what-is-next {
-  margin-left: 7rem;
+  margin-left: -0.6rem;
 }
 
 .fa-redo-alt, .fa-random {
@@ -55,8 +55,10 @@
 // }
 
 .volume-slider {
+  filter: hue-rotate(90deg);
+  width: 8rem;
   margin-top: 0.5rem;
-  margin-left: 2rem;
+  margin-left: 1.3rem;
   padding-left: 0;
   padding-right: 0;
 }
@@ -111,7 +113,6 @@
   height: inherit;
   border-radius: inherit;
 
-  /* fake conical gradients */
   background-image: -webkit-radial-gradient(  50%   0%, 10% 50%, hsla(0,0%,0%,.1) 0%, hsla(0,0%,0%,0) 100%),
     -webkit-radial-gradient(  50% 100%, 10% 50%, hsla(0,0%,0%,.1) 0%, hsla(0,0%,0%,0) 100%),
     -webkit-radial-gradient(   0%  50%, 50% 10%, hsla(0,0%,0%,.1) 0%, hsla(0,0%,0%,0) 100%),
